[package]
name = "test-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fltk ={ version = "1.4.32"}
# [target.'cfg(windows)'.dependencies]
# winapi ={ version = "0.3",features = ["winuser"]}
# windows ={ version = "0.58.0"}